# ArticleSite

./: pyproject.toml
src/: db.sqlite3
src/apps/women/: admin.py  apps.py  forms.py  models.py  urls.py  utils.py  views.py
src/apps/women/migrations/: 0001_initial.py  0002_alter_women_options.py
src/apps/women/templates/women/: addpage.html  base.html  contact.html  index.html
src/apps/women/templatetags/: women_tags.py
src/media/photos/2023/01/19/: images_HG5Hc60.jfif
src/mysite/: settings.py  urls.py
