[tool.poetry]
name = "selfsite"
version = "0.1.0"
description = ""
authors = ["Alexandr Usenko <usenko.alexandr97@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.1.5"
pillow = "^9.4.0"
django-debug-toolbar = "^3.8.1"
django-simple-captcha = "^0.5.17"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
